@@ -1167,8 +1167,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function find($condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
+		if($condition instanceof CDbCriteria && !empty($condition->with))
 			return $this->with($condition->with)->find($condition);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->find($condition);
 		Yii::trace(get_class($this).'.find()','system.db.ar.CActiveRecord');
 		$criteria=$this->getCommandBuilder()->createCriteria($condition,$params);
 		$criteria->limit=1;
@@ -1184,8 +1186,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function findAll($condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
+		if($condition instanceof CDbCriteria && !empty($condition->with))
 			return $this->with($condition->with)->findAll($condition);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->findAll($condition);
 		Yii::trace(get_class($this).'.findAll()','system.db.ar.CActiveRecord');
 		$criteria=$this->getCommandBuilder()->createCriteria($condition,$params);
 		return $this->query($criteria,true);
@@ -1201,8 +1205,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function findByPk($pk,$condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
+		if($condition instanceof CDbCriteria && !empty($condition->with))
 			return $this->with($condition->with)->findByPk($pk,$condition);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->findByPk($pk,$condition);
 		Yii::trace(get_class($this).'.findByPk()','system.db.ar.CActiveRecord');
 		$prefix=$this->getDbConnection()->getSchema()->quoteTableName('t').'.';
 		$criteria=$this->getCommandBuilder()->createPkCriteria($this->getTableSchema(),$pk,$condition,$params,$prefix);
@@ -1220,8 +1226,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function findAllByPk($pk,$condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
+		if($condition instanceof CDbCriteria && !empty($condition->with))
 			return $this->with($condition->with)->findAllByPk($pk,$condition);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->findAllByPk($pk,$condition);
 		Yii::trace(get_class($this).'.findAllByPk()','system.db.ar.CActiveRecord');
 		$prefix=$this->getDbConnection()->getSchema()->quoteTableName('t').'.';
 		$criteria=$this->getCommandBuilder()->createPkCriteria($this->getTableSchema(),$pk,$condition,$params,$prefix);
@@ -1239,8 +1247,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function findByAttributes($attributes,$condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
+		if($condition instanceof CDbCriteria && !empty($condition->with))
 			return $this->with($condition->with)->findByAttributes($attributes,$condition);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->findByAttributes($attributes,$condition);
 		Yii::trace(get_class($this).'.findByAttributes()','system.db.ar.CActiveRecord');
 		$prefix=$this->getDbConnection()->getSchema()->quoteTableName('t').'.';
 		$criteria=$this->getCommandBuilder()->createColumnCriteria($this->getTableSchema(),$attributes,$condition,$params,$prefix);
@@ -1259,8 +1269,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function findAllByAttributes($attributes,$condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
+		if($condition instanceof CDbCriteria && !empty($condition->with))
 			return $this->with($condition->with)->findAllByAttributes($attributes,$condition);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->findAllByAttributes($attributes,$condition);
 		Yii::trace(get_class($this).'.findAllByAttributes()','system.db.ar.CActiveRecord');
 		$prefix=$this->getDbConnection()->getSchema()->quoteTableName('t').'.';
 		$criteria=$this->getCommandBuilder()->createColumnCriteria($this->getTableSchema(),$attributes,$condition,$params,$prefix);
@@ -1302,8 +1314,10 @@ abstract class CActiveRecord extends CModel
 	 */
 	public function count($condition='',$params=array())
 	{
-		if($condition instanceof CDbCriteria && !empty($condition->with) || is_array($condition) && isset($condition['with']))
-			return $this->with($condition->with)->count($condition);
+		if($condition instanceof CDbCriteria && !empty($condition->with))
+			return $this->with($condition->with)->count($condition,$params);
+		else if(is_array($condition) && isset($condition['with']))
+			return $this->with($condition['with'])->count($condition,$params);
 		Yii::trace(get_class($this).'.count()','system.db.ar.CActiveRecord');
 		$builder=$this->getCommandBuilder();
 		$criteria=$builder->createCriteria($condition,$params);
