@@ -4,6 +4,7 @@
 
 Version 1.1.1 to be released
 ----------------------------
+- Bug: Setting the 'with' option in criteria array doesn't trigger eager loading for AR (Qiang)
 
 Version 1.1.0 January 10, 2010
 ------------------------------
